--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 
     <properties>
         <revision>1.25</revision>
-        <changelist>-SNAPSHOT</changelist>
+        <changelist>-ignore-docker-rm-error</changelist>
         <jenkins.version>2.176.4</jenkins.version>
         <java.level>8</java.level>
         <pipeline-model-definition-plugin.version>1.5.1</pipeline-model-definition-plugin.version>
